# banxico-debate-sim

./: .dockerignore  .gitignore  ARCHITECTURE.md  Caddyfile  Dockerfile  README.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  index.html  render.yaml
backend/: .env.example  pyproject.toml
backend/app/: agent_runtime.py  auth.py  chat.py  config.py  db.py  debate.py  demo.py  llm.py  main.py  memory.py  models.py  personas.py  schemas.py  tools.py  world_data.py
backend/app/data/demo_meetings/: 01_recorte_agosto.json  02_mantener_junio.json  03_alza_defensa_peso.json
backend/app/routes/: agents.py  auth.py  chat.py  config.py  meeting.py  version.py  world_map.py
backend/scripts/: verify_shared_memory.py
backend/tests/: conftest.py  test_auth.py  test_config_demo.py  test_debate_smoke.py  test_memory.py  test_personas.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  api.ts  auth.tsx  format.ts  index.css  main.tsx  types.ts
frontend/src/components/: AgentCard.tsx  MessageBubble.tsx  MinutesPanel.tsx  ToolCallTrace.tsx  VoteTally.tsx
frontend/src/pages/: AgentsPage.tsx  ChatPage.tsx  HomePage.tsx  LoginPage.tsx  MeetingPage.tsx  WorldMapPage.tsx
